--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import kotlin.io.FilePathComponents
-
 buildscript {
     repositories {
         jcenter()
@@ -40,6 +38,7 @@ dependencies {
     implementation "io.ktor:ktor-locations:$ktor_version"
     implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "com.amazonaws:aws-java-sdk-polly:$polly_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
 
